# akflix

./: .gitignore  LEGAL.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: macos-standalone.yml  pages.yml  release.yml  windows-standalone.yml
docker/: docker-compose.yml
scripts/: prepare-macos-sidecars.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/binaries/: ffmpeg.BUILD.txt
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: cinemeta.ts  jellyfin.ts  prowlarr.ts  qbittorrent.ts  rqbit.ts  subtitles.ts  torrentio.ts
src/components/: Artwork.tsx  Brand.tsx  DiscoverCard.tsx  DiscoverHero.tsx  DiscoverRow.tsx  HeroBanner.tsx  MediaCard.tsx  MediaRow.tsx  MiniPlayer.tsx  MobileNavigation.tsx  Navbar.tsx  PlayerHost.tsx  RatingControl.tsx  Skeletons.tsx  Spinner.tsx  StreamController.tsx  TorrentModal.tsx
src/i18n/: index.ts
src/lib/: compatStream.ts  desktop.ts  http.ts  iosSourceCompatibility.ts  mediaSelection.ts  mediaStorage.ts  platform.ts  recommendations.ts  sourceLanguage.ts  torrentTrackers.ts  utils.ts
src/pages/: Browse.tsx  Details.tsx  DirectPlayer.tsx  DiscoverDetails.tsx  Downloads.tsx  Home.tsx  Login.tsx  Player.tsx  Search.tsx  Settings.tsx
src/stores/: authStore.ts  historyStore.ts  playbackStore.ts  settingsStore.ts  torrentStore.ts
src/types/: jellyfin.ts  stremio.ts  (+1 more)
website/: index.html
