[package]
name = "akflix"
version = "1.0.1"
description = "Standalone movie and series streaming app"
authors = ["Akshayan"]
edition = "2021"

[lib]
name = "akflix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
percent-encoding = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
